--- a/client/src/components/templatePages/profilePage/profilePage.html
+++ b/client/src/components/templatePages/profilePage/profilePage.html
@@ -1,112 +1,7 @@
 <div class="profile-page">
     <h1>Профиль</h1>
-    <div class="d-flex">
-        <div class="profile-page__image-block d-flex flex-column">
-            <img v-if="!modifiedUser.photo"
-                 class="profile-page__image-block-img"
-                 src="../../../assets/no-photo.jpg"
-                 alt="user-photo">
-            <img v-else class="profile-page__image-block-img" :src="modifiedUser.photo" alt="user-photo">
-            <v-dialog v-model="dialog" width="400" class="test">
-                <template v-slot:activator="{ on, attrs }">
-                    <v-btn outlined
-                           v-bind="attrs"
-                           v-on="on">
-                        Загрузить фото
-                    </v-btn>
-                </template>
-                <v-list>
-                    <div>
-                        <div class="fa-close ml-auto" @click="dialog = false"></div>
-                    </div>
-                    <div class="d-flex flex-column align-items-center">
-                            <v-file-input
-                                    class="image-file"
-                                    accept=".jpg*,.jpeg*,.png*"
-                                    v-model="imageFile"
-                                    show-size
-                                    label="Добавить изображение"
-                            >
-                            </v-file-input>
-                            <div class="mt-2">
-                                <v-btn
-                                        class="user-profile__form-button"
-                                        color="primary"
-                                        @click="reqUploadPhoto"
-                                        :disabled="imageFile == null">
-                                    Загрузить
-                                </v-btn>
-                            </div>
-<!--                        <div class="change-password__requirements-wrapper ml-10">-->
-<!--                            <div class="change-password__requirements-title">Требования к фото</div>-->
-<!--                            <ul>-->
-<!--                                <li class="change-password__requirement mt-1">доступные расширения: PNG, JPG, JPEG</li>-->
-<!--                                <li class="change-password__requirement mt-1">максимальный размер 5 мегабайт</li>-->
-<!--                                <li class="change-password__requirement mt-1">разрешение изображения 250x250px (в случае превышения размера изображение будет сжато)</li>-->
-<!--                            </ul>-->
-<!--                        </div>-->
-                    </div>
-                </v-list>
-            </v-dialog>
-            <v-btn text @click="reqDeletePhoto()">Удалить</v-btn>
-        </div>
-        <div class="d-flex flex-column profile-page__settings">
-            <h3>Редактирование</h3>
-            <b-row>
-                <b-col cols="2">
-                    <span class="mr-3">Почта: </span>
-                </b-col>
-                <b-col cols="10" lg="6">
-                    <b-form-input placeholder="Введите почту" disabled v-model="modifiedUser.email"></b-form-input>
-                </b-col>
-                <div class="w-100"></div>
-                <b-col cols="2">
-                    <span class="mr-3">Имя: </span>
-                </b-col>
-                <b-col cols="10" lg="6">
-                    <b-form-input class="login-page__login-form-field-input"
-                                  placeholder="Введите имя"
-                                  v-model="modifiedUser.firstname"></b-form-input>
-                </b-col>
-                <div class="w-100"></div>
-                <b-col cols="2">
-                    <span class="mr-3">Фамилия: </span>
-                </b-col>
-                <b-col cols="10" lg="6">
-                    <b-form-input class="login-page__login-form-field-input"
-                                  placeholder="Введите фамилия"
-                                  v-model="modifiedUser.lastname"></b-form-input>
-                </b-col>
-                <div class="w-100"></div>
-                <b-col cols="2">
-                    <span class="mr-3">Отчество: </span>
-                </b-col>
-                <b-col cols="10" lg="6">
-                    <b-form-input class="login-page__login-form-field-input"
-                                  placeholder="Введите отчество"
-                                  v-model="modifiedUser.patronymic"></b-form-input>
-                </b-col>
-                <div class="w-100"></div>
-                <b-col cols="2">
-                    <span class="mr-3">Телефон: </span>
-                </b-col>
-                <b-col cols="10" lg="6">
-                    <b-form-input class="login-page__login-form-field-input"
-                                  placeholder="Введите телефон"
-                                  v-model="modifiedUser.phone"></b-form-input>
-                </b-col>
-            </b-row>
-            <div class="d-flex align-center profile-page__settings-buttons">
-                <v-btn outlined @click="reqSaveChanges">Сохранить изменения</v-btn>
-                <v-btn text @click="rollback">Отмена</v-btn>
-            </div>
-        </div>
-    </div>
-    <b-toast
-            id="infoToast"
-            toaster="b-toaster-top-full custom-toast"
-            :variant="toastInfo.isSuccess ? 'success' : 'error'"
-            auto-hide-delay="2500">
-        <template v-slot:toast-title>{{toastInfo.message}}</template>
-    </b-toast>
+    <template-edit-user v-if="USER.id"
+                        :editUser="USER"
+                        fromProfile>
+    </template-edit-user>
 </div>
