--- a/client/src/css/_main.scss
+++ b/client/src/css/_main.scss
@@ -17,4 +17,5 @@ $svgWhite: 'fff';
         'components/templatePage.scss',
         'components/profilePage.scss',
         'components/viewPage.scss',
-        'components/loginPage.scss';
+        'components/loginPage.scss',
+        'components/adminPage.scss';
