--- a/client/src/css/components/_template.scss
+++ b/client/src/css/components/_template.scss
@@ -162,3 +162,22 @@
         }
     }
 }
+
+
+.dialog-wrapper {
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    padding: 20px;
+
+    &__header {
+        width: 100%;
+        height: 50px;
+        padding: 10px;
+    }
+
+    .fa-close {
+        width: 20px;
+        height: 20px;
+    }
+}
