--- a/client/src/components/loginPage/loginPage.html
+++ b/client/src/components/loginPage/loginPage.html
@@ -29,15 +29,21 @@
         </div>
         <div class="login-page__login-form-field">
             <p class="login-page__login-form-field-title">Пароль</p>
-            <b-form-input
-                    class="login-page__login-form-field-input"
-                    :class="{'login-page__login-form-field-error':error.password}"
-                    placeholder="Введите пароль"
-                    type="password"
-                    v-model="loginForm.password"
-                    @blur="[isRequired('password'), isValidPassword()]"
-            >
-            </b-form-input>
+            <div class="d-flex align-center">
+                <b-form-input
+                        class="login-page__login-form-field-input"
+                        :class="{'login-page__login-form-field-error':error.password}"
+                        placeholder="Введите пароль"
+                        :type="visible.password ? 'text' : 'password'"
+                        v-model="loginForm.password"
+                        @blur="[isRequired('password'), isValidPassword()]"
+                >
+                </b-form-input>
+                <i class="fa ml-3"
+                   :class="{ 'fa-eye':!visible.password, 'fa-eye-close':visible.password }"
+                   @click="visible.password = !visible.password"
+                ></i>
+            </div>
             <animation :duration="200" :name="'slide-down-fade'" :changeHeight="true">
                 <div class="error-wrapper d-flex align-center" v-if="error.passwordValid">
                     <span class="fa-error mr-1"></span>
