--- a/client/src/components/adminPage/adminPage.html
+++ b/client/src/components/adminPage/adminPage.html
@@ -42,15 +42,56 @@
             </div>
         </v-dialog>
     </v-list-group>
+    <div class="mt-5">
+        <v-list-group active-class="black-color">
+            <template v-slot:activator>
+                <v-list-item-title>Статьи</v-list-item-title>
+            </template>
+            <v-list-item class="list-item cursor-pointer"
+                         v-for="article in articles"
+                         :key="`${article.id}`"
+                         @click="[selectArticle(article), dialogArticle = true]">
+                <v-list-item-title>
+                    <div class="d-flex align-center">
+                        <img v-if="!article.files || article.files.length === 0"
+                             class="view__comments-img"
+                             src="../../assets/no-photo.jpg"
+                             alt="article-photo">
+                        <img v-else class="view__comments-img" :src="modifiedUserPhoto(article.files[0])" alt="article-photo">
+                        <span class="ml-3 mr-3">{{article.name}}</span>
+                        <i class="fa fa-trash ml-auto" @click.stop="[dialogConfirmArticle = true, selectArticle(article)]"></i>
+                    </div>
+                </v-list-item-title>
+            </v-list-item>
+            <v-list-item class="list-item cursor-pointer"
+                         @click="openCreateArticleForm">
+                <v-list-item-title>
+                    Написать статью
+                </v-list-item-title>
+            </v-list-item>
+        </v-list-group>
+    </div>
     <modalConfirm :dialogVisible="dialogConfirm"
                   :modalFunction="reqDeleteUser"
-                  :userId="selectedUser.id">
+                  :id="selectedUser.id"
+    >
     </modalConfirm>
-    <b-toast
-            id="infoToast"
-            toaster="b-toaster-top-full custom-toast"
-            :variant="toastInfo.isSuccess ? 'success' : 'error'"
-            auto-hide-delay="2500">
-        <template v-slot:toast-title>{{toastInfo.message}}</template>
-    </b-toast>
+    <modalConfirm :dialogVisible="dialogConfirmArticle"
+                  :modalFunction="reqDeleteArticle"
+                  :id="selectedArticle.id"
+    >
+    </modalConfirm>
+    <v-dialog
+            v-model="dialogArticle"
+            hide-overlay
+            transition="dialog-bottom-transition"
+    >
+        <div class="dialog-wrapper">
+            <div class="dialog-wrapper__header d-flex align-center">
+                <h3>Редактировение статьи</h3>
+                <i class="fa fa-close ml-auto" @click="closeDialog('dialogArticle')"></i>
+            </div>
+            <templateEditArticle :article="selectedArticle"></templateEditArticle>
+        </div>
+    </v-dialog>
 </div>
