--- a/client/src/components/common/modal/modalConfirm.html
+++ b/client/src/components/common/modal/modalConfirm.html
@@ -4,9 +4,9 @@
             <div class="fa-close ml-auto" @click="hideModal"></div>
         </div>
         <div class="d-flex flex-column align-items-center">
-            <h3>Вы действительно хотите удалить пользователя?</h3>
+            <h3>Вы действительно хотите удалить запись?</h3>
             <div class="mt-2 d-flex align-center">
-                <v-btn outlined @click="[modalFunction(userId), hideModal()]">Да</v-btn>
+                <v-btn outlined @click="[modalFunction(id), hideModal()]">Да</v-btn>
                 <v-btn text @click="hideModal">Нет</v-btn>
             </div>
         </div>
