--- a/client/src/components/adminPage/adminPage.html
+++ b/client/src/components/adminPage/adminPage.html
@@ -71,6 +71,31 @@
             </v-list-item>
         </v-list-group>
     </div>
+    <div class="mt-5">
+        <v-list-group active-class="black-color">
+            <template v-slot:activator>
+                <v-list-item-title>Видео</v-list-item-title>
+            </template>
+            <v-list-item class="list-item cursor-pointer"
+                         @click="dialogVideos = true">
+                <v-list-item-title>
+                    Добавить видео
+                </v-list-item-title>
+            </v-list-item>
+            <div v-for="video in videos" class="page__articles-item-wrapper d-flex align-center">
+                <iframe width="300"
+                        height="200"
+                        :key="`${video.id}_${video.url}`"
+                        :src="`${video.url}`"
+                        title="YouTube video player"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                </iframe>
+                <i class="fa fa-trash ml-5" @click.stop="[dialogConfirmVideos = true, selectVideo(video)]"></i>
+            </div>
+        </v-list-group>
+
+    </div>
     <modalConfirm :dialogVisible="dialogConfirm"
                   :modalFunction="reqDeleteUser"
                   :id="selectedUser.id"
@@ -79,6 +104,11 @@
     <modalConfirm :dialogVisible="dialogConfirmArticle"
                   :modalFunction="reqDeleteArticle"
                   :id="selectedArticle.id"
+    >
+    </modalConfirm>
+    <modalConfirm :dialogVisible="dialogConfirmVideos"
+                  :modalFunction="reqDeleteVideo"
+                  :id="selectedVideo.id"
     >
     </modalConfirm>
     <v-dialog
@@ -92,6 +122,20 @@
                 <i class="fa fa-close ml-auto" @click="closeDialog('dialogArticle')"></i>
             </div>
             <templateEditArticle :article="selectedArticle"></templateEditArticle>
+        </div>
+    </v-dialog>
+    <v-dialog
+            v-model="dialogVideos"
+            hide-overlay
+            transition="dialog-bottom-transition"
+            width="800"
+    >
+        <div class="dialog-wrapper">
+            <div class="dialog-wrapper__header d-flex align-center">
+                <h3>Список видео</h3>
+                <i class="fa fa-close ml-auto" @click="closeDialog('dialogVideos')"></i>
+            </div>
+            <videoForm></videoForm>
         </div>
     </v-dialog>
 </div>
