--- a/client/src/css/components/_templatePage.scss
+++ b/client/src/css/components/_templatePage.scss
@@ -10,7 +10,8 @@
 
         &-item {
             width: 300px;
-            height: 250px;
+            min-height: 250px;
+            height: auto;
             border-radius: 5px;
             border: 1px solid $greyBorder;
             position: relative;
@@ -21,7 +22,7 @@
 
             &-img {
                 width: 100%;
-                height: 100%;
+                height: 200px;
                 border-radius: 5px 5px 0 0;
                 z-index: -1;
             }
