--- a/client/src/css/components/_templatePage.scss
+++ b/client/src/css/components/_templatePage.scss
@@ -34,6 +34,9 @@
             &-title {
                 font-size: 20px;
                 font-weight: bold;
+                width: 250px;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
 
             &-description {
